--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "commonjs" /* Specify what module code is generated. */,
     "moduleResolution": "Node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "outDir": "dist",
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@types": ["src/types/index"],
