--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "ts-node index.ts",
-    "build": "tsc --build --clean"
+    "build": "tsc --build"
   },
   "author": "",
   "license": "MIT",
